# SisOperativiDedicati-STM32-ZephyrOS-CNN

./: CMakeLists.txt  README.md  prj.conf  sample.yaml  startup.sh
examples/hello_world/: CMakeLists.txt  main.c  main_functions.cpp  output_handler.cpp
src/: CMakeLists.txt  detection_responder_test.cc  image_provider_test.cc  layer.cpp  main.c  main.cc  main.cpp  main_functions.cc  main_functions.h  person_detection_test.cc
src/tensorflow/lite/core/api/: error_reporter.h  flatbuffer_conversions.h
src/tensorflow/lite/micro/: micro_mutable_op_resolver.h
